--- a/siteStyle.css
+++ b/siteStyle.css
@@ -62,3 +62,104 @@
         float:right;
 
 }
+
+.blocked{
+    display: none;
+
+    position: fixed;
+    width:100%;
+    height:100%;
+    margin: auto;
+    background-color: rgba(0,0,0,0.75);
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.loginPanel{
+    width:400px;
+    height:400px;
+    border:6px outset #02466A;
+    background-image: linear-gradient(to bottom right, #3276AA, #02466A);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+}
+
+.loginInput{
+        width:380px;
+        height:30px;
+        border-radius: 10px;
+        border:3px solid #888888;
+        background-color: #FCFCFF;
+        margin-left: 10px;
+        margin-top: 30px;
+        float: left;
+        font-size:20px;
+        color:#BF56D0;
+        text-align:center;
+        
+}
+input#loginName{
+    margin-top: 40px;
+}
+
+
+
+.loginSubmit{
+        width:100px;
+        height:40px;
+        border-radius: 10px;
+        border:1px solid #000000;
+        background-color: #C51109;
+        margin-left: 150px;
+        margin-top: 50px;
+        float: left;
+        font-size:24px;
+        color:rgb(255, 255, 255);
+        text-align:center;
+        cursor: pointer;
+}
+
+.signUpSubmit{
+        width:100px;
+        height:40px;
+        border-radius: 10px;
+        border:1px solid #000000;
+        background-color: #DDDDDD;
+        margin-left: 150px;
+        margin-top: 20px;
+        float: left;
+        font-size:24px;
+        color:rgb(0, 0, 0);
+        text-align:center;
+        cursor: pointer;
+}
+
+div#userLogin{
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 2px;
+    margin-left: 20px;
+    margin-top: 30px;
+    font-size:30px;
+    font-weight: 900;
+    color:rgb(255, 255,255);
+    text-align:left;
+    -webkit-text-stroke: 0.05px black;
+}
+
+div#loginError{
+    letter-spacing: 2px;
+    margin-left: 20px;
+    font-size:25px;
+    font-weight: 500;
+    color:rgb(200, 0,0);
+    text-align:center;
+    -webkit-text-stroke: 0.20px red;
+}
+
