--- a/siteStyle.css
+++ b/siteStyle.css
@@ -65,7 +65,6 @@
 
 .blocked{
     display: none;
-
     position: fixed;
     width:100%;
     height:100%;
@@ -79,6 +78,7 @@
 }
 
 .loginPanel{
+        display:none;
     width:400px;
     height:400px;
     border:6px outset #02466A;
@@ -118,7 +118,7 @@ input#loginName{
         border:1px solid #000000;
         background-color: #C51109;
         margin-left: 150px;
-        margin-top: 50px;
+        margin-top: 20px;
         float: left;
         font-size:24px;
         color:rgb(255, 255, 255);
@@ -133,7 +133,7 @@ input#loginName{
         border:1px solid #000000;
         background-color: #DDDDDD;
         margin-left: 150px;
-        margin-top: 20px;
+        margin-top: 15px;
         float: left;
         font-size:24px;
         color:rgb(0, 0, 0);
@@ -155,7 +155,8 @@ div#userLogin{
 
 div#loginError{
     letter-spacing: 2px;
-    margin-left: 20px;
+    margin-top: 170px;
+    margin-left: auto;
     font-size:25px;
     font-weight: 500;
     color:rgb(200, 0,0);
