--- a/siteStyle.css
+++ b/siteStyle.css
@@ -1,3 +1,7 @@
+p#center{
+        margin:auto;
+}
+
 .background{
             width:100%;
             height:100%;
@@ -39,14 +43,14 @@
 .headerButton{
         width:150px;
         height:60px;
+        display:flex;
         border-radius: 10px;
         border:3px solid #888888;
         background-color: #333333;
-        margin:32px 20px;
+        margin-left: 20px;
+        margin-top: 32px;
         float:left;
         background-image: linear-gradient( #333333, rgb(39, 60, 71));
-
-        
         font-size:25px;
         color:rgb(255, 148, 219);
         text-align:center;
@@ -54,13 +58,19 @@
 }
 
 .loginButton{
-        width:100px;
-        height:60px;
-        border:1px solid #AAAAAA;
-        background-color: #222222;
-        margin: -50px 50px;
+        width:120px;
+        height:40px;
+        border-radius: 10px;
+        border:1px solid #000000;
+        background-color: rgb(82, 78, 78);
+        margin-right: 10px;
+        margin-top: -10px;
+        font-size:15px;
+        color:rgb(255, 255, 255);
+        text-align:center;
+        display: flex;
+        cursor: pointer;
         float:right;
-
 }
 
 .blocked{
@@ -78,9 +88,23 @@
 }
 
 .loginPanel{
-        display:none;
+    display:none;
     width:400px;
     height:400px;
+    border:6px outset #02466A;
+    background-image: linear-gradient(to bottom right, #3276AA, #02466A);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+}
+
+.signUpPanel{
+    display:none;
+    width:400px;
+    height:450px;
     border:6px outset #02466A;
     background-image: linear-gradient(to bottom right, #3276AA, #02466A);
     position: absolute;
@@ -118,7 +142,7 @@ input#loginName{
         border:1px solid #000000;
         background-color: #C51109;
         margin-left: 150px;
-        margin-top: 20px;
+        margin-top: 10px;
         float: left;
         font-size:24px;
         color:rgb(255, 255, 255);
@@ -133,7 +157,7 @@ input#loginName{
         border:1px solid #000000;
         background-color: #DDDDDD;
         margin-left: 150px;
-        margin-top: 15px;
+        margin-top: 10px;
         float: left;
         font-size:24px;
         color:rgb(0, 0, 0);
@@ -154,13 +178,29 @@ div#userLogin{
 }
 
 div#loginError{
+    visibility: hidden;
     letter-spacing: 2px;
     margin-top: 170px;
+    margin-bottom: 20px;
     margin-left: auto;
-    font-size:25px;
+    font-size:20px;
     font-weight: 500;
     color:rgb(200, 0,0);
     text-align:center;
     -webkit-text-stroke: 0.20px red;
 }
+
+div#signUpError{
+        visibility: hidden;
+        letter-spacing: 2px;
+        margin-top: 225px;
+        margin-bottom: 20px;
+        margin-left: auto;
+        font-size:20px;
+        font-weight: 500;
+        color:rgb(200, 0,0);
+        text-align:center;
+        -webkit-text-stroke: 0.20px red;
+    }
+    
 
