--- a/siteStyle.css
+++ b/siteStyle.css
@@ -1,4 +1,4 @@
-p#center{
+#center{
         margin:auto;
 }
 
@@ -57,6 +57,32 @@ p#center{
       
 }
 
+.headerLogOut{
+    width:60px;
+    height:60px;
+
+    display:flex;
+
+    border-radius: 10px;
+    border:3px solid #888888;
+    background-color: #333333;
+
+    margin-left: 20px;
+    margin-top: 32px;
+    margin-bottom: 90px;
+
+    float:right;
+    background-image: linear-gradient( #550000, rgb(100, 50, 50));
+    font-size:12px;
+
+
+    color:rgb(255, 0, 0);
+    text-align:center;
+    cursor: pointer;
+
+
+
+}
 .loginButton{
         width:120px;
         height:40px;
