--- a/siteStyle.css
+++ b/siteStyle.css
@@ -24,7 +24,7 @@ p{
             width:80%;
             opacity: 1.0;
             height:auto;
-            border: 6px solid #FFFFF;
+            border: 6px solid #FFFFFF;
             background-image: linear-gradient(to bottom right, #e3e2dd, #D7D6D1);
             margin:30px auto;
             padding-top: 200px;
@@ -301,7 +301,7 @@ div#signUpError{
     max-width: 800px;
     height: 500px;
     border: 1px solid rgba(0,0,0,0.0);
-    background-image: linear-gradient(rgba(93,09,09,0.01), rgba(57,0,0,0.00));
+    /*background-image: linear-gradient(rgba(93,09,09,0.01), rgba(57,0,0,0.00));*/
     margin:auto;
     margin-top: 100px;
     margin-bottom: 400px;
@@ -312,8 +312,8 @@ div#signUpError{
     -webkit-animation-name: maroonPulse;
     -webkit-animation-duration: 0.75s;
     -webkit-animation-iteration-count: 1;
-    -webkit-box-shadow: 0 0 18px rgb(85, 0, 0);
-    background-image: linear-gradient(rgba(93,09,09,0.80), rgba(57,0,0,0.70));
+    -webkit-box-shadow: 0 0 18px #27496d;
+    background-image: linear-gradient(to bottom right, #142850, #27496d);
     border: 3px solid rgba(0,0,0);
 }
 
@@ -326,7 +326,7 @@ div#signUpError{
         -webkit-box-shadow: 0 0 0 #FFFFFF; }
     to { 
         background-image: linear-gradient(rgba(93,09,09,0.80), rgba(57,0,0,0.70));
-        -webkit-box-shadow: 0 0 18px rgb(85, 0, 0); }
+        -webkit-box-shadow: 0 0 18px rgb(88, 83, 83); }
 }
 
 
