--- a/siteStyle.css
+++ b/siteStyle.css
@@ -333,7 +333,7 @@ div#signUpError{
 
 #homeFilmInformation{
     width:300px;
-    height: 240px;
+    height: auto;
     margin:auto;
     margin-top: 200px;
     opacity: 1.00;
