--- a/siteStyle.css
+++ b/siteStyle.css
@@ -10,6 +10,15 @@ p{
     margin:auto;
 }
 
+a:link {
+    text-decoration: none;
+}
+a.headerBtn:visited{
+    color: rgb(227, 216, 95);
+ 
+}
+
+
 .background{
             width:100%;
             height:100%;
@@ -89,7 +98,7 @@ p{
 
 .headerLogOut{
     width:60px;
-    height:60px;
+    height:40px;
 
     display:none;
 
@@ -97,8 +106,8 @@ p{
     border:3px solid #888888;
     background-color: #333333;
 
-    margin-left: 20px;
-    margin-top: 32px;
+    margin-right: -80px;
+    margin-top: 30px;
     margin-bottom: 90px;
 
     float:right;
@@ -153,7 +162,7 @@ p{
     width:100%;
     height:100%;
     margin: auto;
-    background-color: rgba(0,0,0,0.75);
+    background-color: rgba(0,0,0,0.80);
     cursor: pointer;
     top: 0;
     left: 0;
@@ -165,8 +174,10 @@ p{
     display:none;
     width:400px;
     height:400px;
-    border:6px outset #02466A;
-    background-image: linear-gradient(to bottom right, #3276AA, #02466A);
+    /* border:6px outset #02466A; */
+    border-radius: 20px;
+    /*background-image: linear-gradient(to bottom right, #3276AA, #02466A);*/
+     background-image: linear-gradient(to bottom right, rgba(128, 128, 128, 0.1), rgba(255, 255, 255, 0.1));
     position: absolute;
     top: 50%;
     left: 50%;
@@ -179,8 +190,10 @@ p{
     display:none;
     width:400px;
     height:450px;
-    border:6px outset #02466A;
-    background-image: linear-gradient(to bottom right, #3276AA, #02466A);
+    /* border:6px outset #02466A; */
+    border-radius: 20px;
+    /* background-image: linear-gradient(to bottom right, #3276AA, #02466A); */
+    background-image: linear-gradient(to bottom right, rgba(128, 128, 128, 0.1), rgba(255, 255, 255, 0.1));
     position: absolute;
     top: 50%;
     left: 50%;
@@ -249,10 +262,22 @@ input#loginName{
 }
 
 div#userLogin{
-    font-family: 'Anton', sans-serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 2px;
-    margin-left: 20px;
-    margin-top: 30px;
+    margin-left: 30%;
+    margin-top: 25px;
+    font-size:30px;
+    font-weight: 900;
+    color:rgb(243, 230, 238);
+    text-align:left;
+    -webkit-text-stroke: 0.05px black;
+}
+
+div#userSignUp{
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 2px;
+    margin-left: 26%;
+    margin-top: 25px;
     font-size:30px;
     font-weight: 900;
     color:rgb(255, 255,255);
@@ -435,3 +460,42 @@ div#signUpError{
     text-shadow: 0 0 10px #FFAE00,0 0 20px #F6FF00 ;
     float:right;
 }
+
+.pagePanel{
+    margin-left:50%;
+    margin-top:50px;
+    padding-bottom: 50px;
+    transform: translate(-10%, -50%);
+}
+
+.pageNo{
+    text-shadow: 0 0 2px #FFAE00,0 0 1px #F6FF00 ;
+ 
+}
+
+.pageNo:hover{transform: scale(1.5);
+    animation-fill-mode: both;
+    -webkit-animation-name: yellowPulse;
+    -webkit-animation-duration: 0.35s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-box-shadow: 0 0 36px rgb(227, 216, 95);
+
+}
+@-webkit-keyframes yellowPulse {
+   
+    from { 
+        -webkit-box-shadow: 0 0 0 #3C1D00; 
+        font-size:30px;  
+         }
+        
+    to { 
+        -webkit-box-shadow: 0 0 36px rgb(227, 216, 95);
+        font-size:40px;
+         }
+}
+
+.pageNoLine{
+    font-size: 30px;
+    color:black;
+}
+
